# qtrade

./: .gitignore  Dockerfile  LICENSE.txt  README.md  kzz.py  main.ipynb  portfolio_v2.py  pyproject.toml  requirements.txt  rule.ipynb  rule.py  temp.csv
.devcontainer/: devcontainer.json
.github/workflows/: etf_cron_hour.yml  github_trend.yml  nn_strategy_dayly.yml  okex_cron_hour.yml  rank_strategy_dayly.yml  update_micro.yml
.streamlit/: secrets.toml
src/backend/: Dockerfile  ddgs_service.py  get_etf_scale.py  get_github_trend.py
src/frontend/: admin.html
src/llm_service/: llm_service.py  requirements.txt
src/qtrade/: StockData.py  __about__.py  __init__.py  app.py  concept_rotation.py  etf_trend_strategy.py  get_baidu_trend.py  get_increase_stop_stock.py  get_portfolio.py  get_spark.py  get_stock_realtime.py  mysql_util.py  nn_strategy_app.py  nn_strategy_offline.py  okx_strategy.py  qtrade.py  qtrade_forex.py  rank_strategy.py  rank_strategy_app.py  rank_strategy_portfolio.py  run.py  send_message.py  trade_strategy.py  update_btc_data.py  update_etf_data.py  update_micro_index.py
src/qtrade/.streamlit/: secrets.toml
src/qtrade/bertClassify/: news_classify_onnx.py  requiremets.txt
src/qtrade/data/: spark.sql
src/qtrade/pages/: qtrade_btc.py  qtrade_etf.py  qtrade_etf_matchless.py  qtrade_forex.py  qtrade_fund.py  qtrade_matchless.py
